@@ -9,6 +9,7 @@ import java.util.Map;
 import junit.framework.TestCase;
 import net.sourceforge.cruisecontrol.BuildInfo;
 import net.sourceforge.cruisecontrol.BuildInfoSummary;
+import net.sourceforge.cruisecontrol.taglib.BuildInfoTag;
 
 /**
  * @author Jeffrey Fredrick
@@ -22,7 +23,7 @@ public class TimeChartDataTest extends TestCase {
 
         List buildInfos = new ArrayList();
         BuildInfoSummary buildInfoSummary = new BuildInfoSummary(buildInfos);
-        map.put("buildInfo", buildInfoSummary);
+        map.put(BuildInfoTag.INFO_ATTRIBUTE, buildInfoSummary);
         assertNotNull(data.produceDataset(map));
     }
 
@@ -36,7 +37,7 @@ public class TimeChartDataTest extends TestCase {
         info = new BuildInfo(new File("log20050708100431.xml"));
         buildInfos.add(info);
         BuildInfoSummary buildInfoSummary = new BuildInfoSummary(buildInfos);
-        map.put("buildInfo", buildInfoSummary);
+        map.put(BuildInfoTag.INFO_ATTRIBUTE, buildInfoSummary);
         assertNotNull(data.produceDataset(map));
     }
 }
